GNOME Bugzilla – Bug 614817
undefined reference to `NAUTILUS_IS_SHARE'
Last modified: 2010-04-04 16:32:20 UTC
Created attachment 157904 [details] [review] Fix build failure gnome-user-share fails to build from source, here's relevant portion: /bin/bash ../libtool --tag=CC --mode=link cc -g -O2 -g -Wall -O2 -avoid-version -module -no-undefined -Wl,-z,defs -Wl,-O1 -Wl,--as-needed -o libnautilus-share-extension.la -rpath /usr/lib/nautilus/extensions-2.0 nautilus-share-bar.lo share-extension.lo libuser-share-common.la -pthread -lnautilus-extension -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lm -lpangocairo-1.0 -lcairo -lgio-2.0 -lpango-1.0 -lfreetype -lfontconfig -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lrt -lglib-2.0 libtool: link: cc -shared .libs/nautilus-share-bar.o .libs/share-extension.o -Wl,--whole-archive ./.libs/libuser-share-common.a -Wl,--no-whole-archive -lnautilus-extension /usr/lib/libgtk-x11-2.0.so /usr/lib/libgdk-x11-2.0.so /usr/lib/libatk-1.0.so /usr/lib/libpangoft2-1.0.so /usr/lib/libgdk_pixbuf-2.0.so -lm /usr/lib/libpangocairo-1.0.so /usr/lib/libcairo.so /usr/lib/libgio-2.0.so /usr/lib/libpango-1.0.so /usr/lib/libfreetype.so -lfontconfig /usr/lib/libgobject-2.0.so /usr/lib/libgmodule-2.0.so /usr/lib/libgthread-2.0.so -lrt /usr/lib/libglib-2.0.so -Wl,-z -Wl,defs -Wl,-O1 -Wl,--as-needed -pthread -pthread -Wl,-soname -Wl,libnautilus-share-extension.so -o .libs/libnautilus-share-extension.so .libs/share-extension.o: In function `nautilus_user_share_finalize': /tmp/buildd/gnome-user-share-2.30.0/src/share-extension.c:211: undefined reference to `NAUTILUS_IS_SHARE' collect2: ld returned 1 exit status make[4]: *** [libnautilus-share-extension.la] Error 1 This was introduced by commit 7697390e29f9cf9452b1f7e882ca3a2eabad2a07, attached patch should fix this issue.
commit 44c485993237e71704d768301e22c7820f291b15 Author: Luca Falavigna <dktrkranz@debian.org> Date: Sun Apr 4 17:29:49 2010 +0100 Fix compilation failure NAUTILUS_IS_SHARE isn't defined anymore, use NAUTILUS_IS_USER_SHARE instead. https://bugzilla.gnome.org/show_bug.cgi?id=614817