Fix compilation failure

NAUTILUS_IS_SHARE isn't defined anymore, use NAUTILUS_IS_USER_SHARE
instead.

https://bugzilla.gnome.org/show_bug.cgi?id=614817